fix authorization, fix frontend errors
